fix: source code copy button z-index

--- a/src/client/theme-default/builtins/SourceCode/index.less
+++ b/src/client/theme-default/builtins/SourceCode/index.less
@@ -8,7 +8,7 @@
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 
-  > pre.prism-code {
+  >pre.prism-code {
     margin: 0;
     padding: 18px 24px;
     font-size: 14px;
@@ -25,6 +25,7 @@
 
   &-copy {
     position: absolute;
+    z-index: 1;
     top: 9px;
     right: 12px;
     display: inline-block;
@@ -35,17 +36,17 @@
     cursor: pointer;
     transition: all 0.2s;
 
-    > svg {
+    >svg {
       width: 16px;
       fill: darken(@c-border, 20%);
       transition: fill 0.2s;
     }
 
-    &:hover > svg {
+    &:hover>svg {
       fill: darken(@c-border, 30%);
     }
 
-    &[data-copied] > svg {
+    &[data-copied]>svg {
       fill: rgb(11 174 11);
     }
   }
